# Database

./: CMakeLists.txt  README.md
apps/tcp/: CMakeLists.txt  client.c  client_core.c  client_core.h  core_server.c  messages.c  messages.h  server.c  server_core.c  server_core.h
include/client/: tcp_client.h
include/db/: data.h  db.h  dbgen.h  dbserial.h
include/lexer/: lexer.h
include/protocol/: protocol.h
include/server/: tcp_server.h
include/utils/avl_tree/: avl_tree.h
include/utils/binary_node/: binary_node.h
include/utils/binary_tree/: binary_tree.h
include/utils/list/: list.h
include/utils/queue/: queue.h
include/utils/serializing/: serializing.h
include/utils/stack/: stack.h
src/client/: CMakeLists.txt  tcp_client.c
src/db/: CMakeLists.txt  core.c  core.h  data.c  db.c  dbgen.c  dbserial.c
src/lexer/: CMakeLists.txt  lexer.c
src/protocol/: CMakeLists.txt  protocol.c
src/server/: CMakeLists.txt  tcp_server.c
src/utils/: CMakeLists.txt
src/utils/avl_tree/: CMakeLists.txt  avl_defs.h  avl_tree.c
src/utils/binary_node/: CMakeLists.txt
src/utils/binary_tree/: CMakeLists.txt  binary_tree.c
src/utils/list/: CMakeLists.txt  list.c
src/utils/queue/: CMakeLists.txt  queue.c
src/utils/serializing/: CMakeLists.txt  serializing.c
src/utils/stack/: CMakeLists.txt  stack.c
tests/: CMakeLists.txt  test_avltree.c  test_client.c  test_db.c  test_lexer.c  test_serial.c  test_server.c
